Partway through massive refactor (committing for backup).  Adding tuple and array types while removing the unnecessary listifying of simple values when getting the collapsed version.